--- a/app/components/labtest-module/for-labtest/for-labtest.component.html
+++ b/app/components/labtest-module/for-labtest/for-labtest.component.html
@@ -310,8 +310,7 @@
                     <ng-container *ngIf="
                     (loginService.currentUserName != null &&
                       loginService.currentUserRoleSession == 'Admin') ||
-                    loginService.currentUserRoleSession == 'QASupervisor' ||
-                    loginService.currentUserRoleSession == 'QA MANAGER'
+                    loginService.currentUserRoleSession == 'QASupervisor'
                   ">
 
                       <div [hidden]="item.qa_supervisor_is_approve_date">
@@ -2480,7 +2479,7 @@
             </div>
           </div>
 
-          <div class="details">
+          <div class="details" style="display: none;">
             <div class="element-details">
               <div class="input-group mb-sm-0 sm-col-1">
                 <label for="staticEmail" class="col-sm-3 col-form-label">Clent/Department : </label>
