--- a/app/components/labtest-module/for-labtest/for-labtest.component.html
+++ b/app/components/labtest-module/for-labtest/for-labtest.component.html
@@ -100,10 +100,12 @@
                     }}
                   </td>
                   <td>
+
                     <button mat-stroked-button class="editbtnStyle" color="basic" (click)="viewHistory(item)"
                       data-toggle="modal" data-target="#forlabtestHistoricalViewModal" data-backdrop="false"
                       data-keyboard="false">
-                      <span class="fa fa-eye">{{ item.historical_lab_transact_count }}</span>
+                      <span class="fa fa-eye" *ngIf="item.historical_lab_transact_count != 0"> </span>{{
+                      item.historical_lab_transact_count }}
                     </button>
 
                   </td>
@@ -2906,35 +2908,35 @@
           </div>
 
 
-<div>
-  <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width:100%">
-    <thead>
-    <tr class="text-light header-bg-color-um system-name">
-      <th style="text-align: center;">Sample Names</th>
-      <th style="text-align: center;">Sample Qty.</th>
-      <th style="text-align: center;">BBD</th>
-      <th style="text-align: center;">Shelf Life Extension</th>
-      <th style="text-align: center;">Procedure</th>
-      <th style="text-align: center;">Remarks</th>
-      <th style="text-align: center;">Sub Remarks</th>
-    </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let item of labtestHistorical" style="text-align:center;">
-        <td>{{ item.item_desc }}</td>
-        <td>{{ item.sample_Qty }}</td>
-        <td>{{ item.bbd }}</td>
-        <td>{{ item.lab_exp_date_extension | date:'MM-dd-yyyy' }}</td>
-        <td>{{ item.laboratory_procedure}}</td>
-        <td>{{ item.lab_result_remarks}}</td>
-        <td>{{ item.lab_sub_remarks}}</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-   
+          <div>
+            <table class="table table-striped table-bordered nowrap table-responsive-sm" style="width:100%">
+              <thead>
+                <tr class="text-light header-bg-color-um system-name">
+                  <th style="text-align: center;">Sample Names</th>
+                  <th style="text-align: center;">Sample Qty.</th>
+                  <th style="text-align: center;">BBD</th>
+                  <th style="text-align: center;">Shelf Life Extension</th>
+                  <th style="text-align: center;">Procedure</th>
+                  <th style="text-align: center;">Remarks</th>
+                  <th style="text-align: center;">Sub Remarks</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let item of labtestHistorical" style="text-align:center;">
+                  <td>{{ item.item_desc }}</td>
+                  <td>{{ item.sample_Qty }}</td>
+                  <td>{{ item.bbd }}</td>
+                  <td>{{ item.lab_exp_date_extension | date:'MM-dd-yyyy' }}</td>
+                  <td>{{ item.laboratory_procedure}}</td>
+                  <td>{{ item.lab_result_remarks}}</td>
+                  <td>{{ item.lab_sub_remarks}}</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
 
-    
+
+
         </div>
         <div class="modal-footer">
           <button mat-stroked-button color="accent" class="mr-1" id="proceedAndApproveFormCancelModal"
