--- a/app/admin/components/projet-ponearly-expiry-approval/projet-ponearly-expiry-approval.component.html
+++ b/app/admin/components/projet-ponearly-expiry-approval/projet-ponearly-expiry-approval.component.html
@@ -390,21 +390,10 @@
               </div>
             </div>
 
-            <!-- end -->
-
-            <!-- <div *ng-if="totalRejectMaterial"> -->
-            <!-- <div *ngIf="!totalRejectMaterial === '0'"> -->
+      
             <div>
               <div class="partition-div">Rejection Information</div>
-              <!-- <div class="col-lg-12">
-                <div class="form-row">
-                  <mat-form-field floatLabel="auto" appearance="standard" color="primary">
-                    <input type="text" matInput name="total_of_reject_mat" formControlName="total_reject" readonly/>
-                    <mat-hint align="end">Total Reject</mat-hint>
-                    <mat-icon matPrefix>list<span class="material-icons-outlined"> </span></mat-icon>
-                  </mat-form-field>
-                </div>
-              </div> -->
+    
 
               <div class="flex">
                 <div class="box-1 reject{{ totalRejectMaterial }}">
@@ -437,7 +426,7 @@
                       </mat-form-field>
                     </div>
                   </div>
-                  <div class="form-group row" id="total-reject">
+                  <div *ngIf="editProject.total_of_reject_mat != '0'" class="form-group row" id="total-reject">
                     <div class="col-sm-8">
                       <mat-form-field floatLabel="auto" appearance="standard" color="primary">
                         <input type="text" matInput name="total_of_reject_mat" formControlName="total_reject"
@@ -486,7 +475,7 @@
                     </div>
                   </div>
 
-                  <div class="form-group row" id="total-confirm-reject">
+                  <div *ngIf="editProject.total_of_reject_mat != '0'" class="form-group row" id="total-confirm-reject">
                     <div class="col-sm-8">
                       <mat-form-field floatLabel="auto" appearance="standard" color="primary">
                         <input type="text" matInput name="total_of_reject_mat" formControlName="total_reject"
